<resources>
    <string name="app_name">"MAD "</string>
    <string name="UN">Enter value</string>
    <string name="NIC">NIC</string>
    <string name="AD">Address</string>
    <string name="age">Enter age</string>
    <string name="CNo">+94********</string>
    <string name="ADD">ADD</string>
    <string name="reset">Reset</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="uid">User\'s ID</string>
    <string name="age_a">Age</string>
    <string name="name">Name</string>
    <string name="Contact_no">Contact_NO</string>
</resources>